--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>跳转中......</title>
 <script type="text/javascript">
 window.location.href = 'http://wtqq520.bigblog.gq/';
 </script>
