--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>跳转中......</title>
 <script type="text/javascript">
-window.location.href = 'http://wtqq520.bigblog.gq/';
+window.location.href = 'http://wtqq520.xuehu.biz/';
 </script>
 </head>
 <body>
